fixed possible signature overflow issue

--- a/client/src/pages/TestView/testView.css
+++ b/client/src/pages/TestView/testView.css
@@ -11,11 +11,12 @@
   border-top: 20px solid #002357;
   margin-top: 3%;
   padding-top: 3%;
-  height: 250px;
+  height: 300px;
   /* width: 90%; */
   /* margin-left: 5%; */
   border-radius: 5%;
-  /* overflow-y: scroll; */
+  overflow-y: scroll; 
+  overflow-x: scroll;
   /* margin-left: 2%; */
 }
 
@@ -36,7 +37,7 @@
 }
 
 .signature-image {
-  margin-top: 2%;
+  margin-top: 4%;
   margin-bottom: 4%;
 }
 
